tests/debugger/field_names.exp
       1:      1  1 CALL pred field_names:main/2-0 (det) field_names.m:51
mdb> echo on
Command echo enabled.
mdb> context none
Contexts will not be printed.
mdb> step
       2:      2  2 CALL pred field_names:make_t1f1/5-0 (det)
mdb> finish
       3:      2  2 EXIT pred field_names:make_t1f1/5-0 (det)
mdb> p 5
       HeadVar__5             	t1f1(41, 42, 43, 44)
mdb> p 5^1x
mdb: bad component selector.
mdb> p 5^1
       HeadVar__5             	41
mdb> p 5^2
       HeadVar__5             	42
mdb> p 5^3
       HeadVar__5             	43
mdb> p 5^4
       HeadVar__5             	44
mdb> p 5^t1a
       HeadVar__5             	41
mdb> p 5^t1b
       HeadVar__5             	42
mdb> p 5^t1c
mdb: the path t1c does not exist.
mdb> p 5^t1d
       HeadVar__5             	44
mdb> p 5^t1e
mdb: the path t1e does not exist.
mdb> browse 5
browser> ^1x
error: cannot change to subterm
browser> ^1
browser> p
41
browser> ^..^t1a
browser> p
41
browser> ^..^t1b
browser> p
42
browser> ^..^t1c
error: cannot change to subterm
browser> ^..^t1d
browser> p
44
browser> ^..^t1e
error: cannot change to subterm
browser> p
44
browser> quit
mdb> step
       4:      3  2 CALL pred field_names:make_t1f2/4-0 (det)
mdb> finish
       5:      3  2 EXIT pred field_names:make_t1f2/4-0 (det)
mdb> p 4
       HeadVar__4             	t1f2(51, 52, 53)
mdb> p 4^1
       HeadVar__4             	51
mdb> p 4^2
       HeadVar__4             	52
mdb> p 4^3
       HeadVar__4             	53
mdb> p 4^t1a
mdb: the path t1a does not exist.
mdb> p 4^t1e
       HeadVar__4             	51
mdb> p 4^t1f
mdb: the path t1f does not exist.
mdb> p 4^t1g
       HeadVar__4             	53
mdb> browse 4
browser> ^t1a
error: cannot change to subterm
browser> ^t1e
browser> p
51
browser> ^..^t1f
error: cannot change to subterm
browser> ^..^t1g
browser> p
53
browser> quit
mdb> step
       6:      4  2 CALL pred field_names:make_t2/5-0 (det)
mdb> finish
       7:      4  2 EXIT pred field_names:make_t2/5-0 (det)
mdb> p 5
       HeadVar__5             	t2f(0.600000000000000, 61, t1f1(41, 42, 43, 44), t1f2(51, 52, 53))
mdb> p 5^1
       HeadVar__5             	0.600000000000000
mdb> p 5^2
       HeadVar__5             	61
mdb> p 5^3
       HeadVar__5             	t1f1(41, 42, 43, 44)
mdb> p 5^3^t1a
       HeadVar__5             	41
mdb> p 5^3^t1b
       HeadVar__5             	42
mdb> p 5^3^t1c
mdb: the path t1c does not exist.
mdb> p 5^3^t1d
       HeadVar__5             	44
mdb> p 5^3^t1e
mdb: the path t1e does not exist.
mdb> p 5^4
       HeadVar__5             	t1f2(51, 52, 53)
mdb> p 5^4^t1a
mdb: the path t1a does not exist.
mdb> p 5^4^t1e
       HeadVar__5             	51
mdb> p 5^4^t1f
mdb: the path t1f does not exist.
mdb> p 5^4^t1g
       HeadVar__5             	53
mdb> p 5^t2a
       HeadVar__5             	0.600000000000000
mdb> p 5^t2b
       HeadVar__5             	t1f1(41, 42, 43, 44)
mdb> p 5^t2b^t1a
       HeadVar__5             	41
mdb> p 5^t2b^t1b
       HeadVar__5             	42
mdb> p 5^t2b^t1c
mdb: the path t1c does not exist.
mdb> p 5^t2b^t1d
       HeadVar__5             	44
mdb> p 5^t2b^t1e
mdb: the path t1e does not exist.
mdb> p 5^t2c
       HeadVar__5             	t1f2(51, 52, 53)
mdb> p 5^t2c^t1a
mdb: the path t1a does not exist.
mdb> p 5^t2c^t1e
       HeadVar__5             	51
mdb> p 5^t2c^t1f
mdb: the path t1f does not exist.
mdb> p 5^t2c^t1g
       HeadVar__5             	53
mdb> browse 5
browser> ^3^t1a
browser> p
41
browser> ^..^..^3^t1b
browser> p
42
browser> quit
mdb> browse 5
browser> ^t2b
browser> p
t1f1(41, 42, 43, 44)
browser> ^t1a
browser> p
41
browser> ^..^..^t2c^t1e
browser> p
51
browser> quit
mdb> step
       8:      5  2 CALL pred field_names:make_t3/4-0 (det)
mdb> finish
       9:      5  2 EXIT pred field_names:make_t3/4-0 (det)
mdb> p 4
       HeadVar__4             	t3f(t1f2(51, 52, 53), 72, "xyzzy", t1f1(41, 42, 43, 44))
mdb> p 4^1
       HeadVar__4             	t1f2(51, 52, 53)
mdb> p 4^1^1
       HeadVar__4             	51
mdb> p 4^1^t1a
mdb: the path t1a does not exist.
mdb> p 4^1^t1e
       HeadVar__4             	51
mdb> p 4^1^t1g
       HeadVar__4             	53
mdb> p 4^2
       HeadVar__4             	72
mdb> p 4^3
       HeadVar__4             	"xyzzy"
mdb> p 4^3^1
mdb: the path 1 does not exist.
mdb> p 4^3^t1a
mdb: the path t1a does not exist.
mdb> p 4^4
       HeadVar__4             	t1f1(41, 42, 43, 44)
mdb> p 4^4^t1a
       HeadVar__4             	41
mdb> p 4^4^t1b
       HeadVar__4             	42
mdb> p 4^4^t1c
mdb: the path t1c does not exist.
mdb> p 4^4^t1d
       HeadVar__4             	44
mdb> p 4^4^t1e
mdb: the path t1e does not exist.
mdb> p 4^t3a
       HeadVar__4             	t1f2(51, 52, 53)
mdb> p 4^t3a^1
       HeadVar__4             	51
mdb> p 4^t3a^t1a
mdb: the path t1a does not exist.
mdb> p 4^t3a^t1e
       HeadVar__4             	51
mdb> p 4^t3a^t1g
       HeadVar__4             	53
mdb> p 4^t3b
       HeadVar__4             	72
mdb> p 4^t3c
       HeadVar__4             	"xyzzy"
mdb> p 4^t3d
       HeadVar__4             	t1f1(41, 42, 43, 44)
mdb> p 4^t3d^t1a
       HeadVar__4             	41
mdb> p 4^t3d^t1b
       HeadVar__4             	42
mdb> p 4^t3d^t1c
mdb: the path t1c does not exist.
mdb> p 4^t3d^t1d
       HeadVar__4             	44
mdb> p 4^t3d^t1e
mdb: the path t1e does not exist.
mdb> p 4^t3e^t1a
mdb: the path t3e^t1a does not exist.
mdb> step
      10:      6  2 CALL pred field_names:make_t4/2-0 (det)
mdb> finish
      11:      6  2 EXIT pred field_names:make_t4/2-0 (det)
mdb> p 2
       A(2) (arg 2)           	t2f(0.600000000000000, 61, t1f1(41, 42, 43, 44), t1f2(51, 52, 53))
mdb> p 2^1
       A(2) (arg 2)           	0.600000000000000
mdb> p 2^2
       A(2) (arg 2)           	61
mdb> p 2^3^t1a
       A(2) (arg 2)           	41
mdb> p 2^3^t1b
       A(2) (arg 2)           	42
mdb> p 2^3^t1c
mdb: the path t1c does not exist.
mdb> p 2^3^t1d
       A(2) (arg 2)           	44
mdb> p 2^3^t1e
mdb: the path t1e does not exist.
mdb> p 2^4
       A(2) (arg 2)           	t1f2(51, 52, 53)
mdb> p 2^4^t1a
mdb: the path t1a does not exist.
mdb> p 2^4^t1e
       A(2) (arg 2)           	51
mdb> p 2^4^t1f
mdb: the path t1f does not exist.
mdb> p 2^4^t1g
       A(2) (arg 2)           	53
mdb> p 2^t2a
       A(2) (arg 2)           	0.600000000000000
mdb> p 2^t2b
       A(2) (arg 2)           	t1f1(41, 42, 43, 44)
mdb> p 2^t2b^t1a
       A(2) (arg 2)           	41
mdb> p 2^t2b^t1b
       A(2) (arg 2)           	42
mdb> p 2^t2b^t1c
mdb: the path t1c does not exist.
mdb> p 2^t2b^t1d
       A(2) (arg 2)           	44
mdb> p 2^t2b^t1e
mdb: the path t1e does not exist.
mdb> p 2^t2c
       A(2) (arg 2)           	t1f2(51, 52, 53)
mdb> p 2^t2c^t1a
mdb: the path t1a does not exist.
mdb> p 2^t2c^t1e
       A(2) (arg 2)           	51
mdb> p 2^t2c^t1f
mdb: the path t1f does not exist.
mdb> p 2^t2c^t1g
       A(2) (arg 2)           	53
mdb> step
      12:      7  2 CALL pred field_names:make_t5/2-0 (det)
mdb> finish
      13:      7  2 EXIT pred field_names:make_t5/2-0 (det)
mdb> p 2
       HeadVar__2             	t5f(t1f1(41, 42, 43, 44))
mdb> p 2/1
       HeadVar__2             	t1f1(41, 42, 43, 44)
mdb> p 2/1/1
       HeadVar__2             	41
mdb> p 2/1/t1a
       HeadVar__2             	41
mdb> p 2/t5a
       HeadVar__2             	t1f1(41, 42, 43, 44)
mdb> p 2/t5a/1
       HeadVar__2             	41
mdb> p 2/t5a/t1a
       HeadVar__2             	41
mdb> p 2/t6a
mdb: the path t6a does not exist.
mdb> step
      14:      8  2 CALL pred field_names:make_t6/2-0 (det)
mdb> finish
      15:      8  2 EXIT pred field_names:make_t6/2-0 (det)
mdb> p 2
       HeadVar__2             	t6f(0.900000000000000)
mdb> p 2/1
       HeadVar__2             	0.900000000000000
mdb> p 2/t5a
mdb: the path t5a does not exist.
mdb> p 2/t6a
mdb: the path t6a does not exist.
mdb> continue -S
t1f1(41, 42, 43, 44)
t1f2(51, 52, 53)
t2f(0.600000000000000, 61, t1f1(41, 42, 43, 44), t1f2(51, 52, 53))
t3f(t1f2(51, 52, 53), 72, "xyzzy", t1f1(41, 42, 43, 44))
t2f(0.600000000000000, 61, t1f1(41, 42, 43, 44), t1f2(51, 52, 53))
t5f(t1f1(41, 42, 43, 44))
t6f(0.900000000000000)
